--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use either an objectid (from an item in this collect), a relative location of an image in this repo, or a full url to an image elsewhere
-featured-image: https://objects.lib.uidaho.edu/crabtree/crabtree-banner.jpg
+featured-image: https://www.swarthmore.edu/sites/default/files/assets/images/campus-tour/libraries_hdr_200318_homepage_h_3500.jpg
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 12em # the margin from the top your title portion will appear.
 # optional: change position of background image, center, top, bottom
