Update URLs in data files for local development environment
- Changed URLs in search.json to point to localhost for local testing.
- Updated links in subjects.csv and subjects.json to reflect local URLs.
- Modified citation link in ce_cc_d2_1951_model.html to use localhost.
- Added artifacts1.csv with extensive data on artifacts, including various formats and metadata.

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ baseurl:
 source-code: https://github.com/ahmad-fayyaz/liblab_peace_collections
 
 # url to the shared assets folder on mainweb
-digital-assets: https://www.lib.uidaho.edu/assets ## important for css files, change later to local
+digital-assets: https://www.lib.uidaho.edu/assets
 
 ##########
 # SITE SETTINGS
