--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # URL VARIABLES
 #
 # site domain, full URL to the production location of your collection
-url: https://swat-ds.github.io/peace-collection/
+url: https://swat-ds.github.io/liblab_peace_collections
 # path to location on the domain if necessary e.g. /digital/hjccc
 baseurl:
 # location of code, the full url to your github repository
